src/test/ui/issues/issue-17252.stderr
error[E0391]: cycle detected when normalizing `FOO`
   |
note: ...which requires simplifying constant for the type system `FOO`...
  --> $DIR/issue-17252.rs:1:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `FOO`...
  --> $DIR/issue-17252.rs:1:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `FOO`...
  --> $DIR/issue-17252.rs:1:1
   |
LL | const FOO: usize = FOO;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires normalizing `FOO`, completing the cycle
note: cycle used when const-evaluating + checking `main::{{constant}}#0`
  --> $DIR/issue-17252.rs:4:18
   |
LL |     let _x: [u8; FOO]; // caused stack overflow prior to fix
   |                  ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
